fix to alignment of buttons in calendar post tooltip

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -947,11 +947,19 @@ a {
 			position: relative;
 			margin: 0 12px;
 			padding-top: 12px;
+			padding-bottom: 12px;
 			bottom: inherit;
+			height: auto;
 		}
 		.btn-xs {
 			font-size: 8px;
 			letter-spacing: .2em;
+		}
+		.before-approve, .after-approve {
+			float: left;
+			+ .btn {
+				margin-left: .5rem;
+			}
 		}
 	}
 	&.week-post {
